fix: Use just needed scrollbar

--- a/src/sharedData/visualization/components/Visualization.css
+++ b/src/sharedData/visualization/components/Visualization.css
@@ -23,5 +23,5 @@
   background: #666666;
   color: #ffffff;
   max-height: 150px;
-  overflow: scroll;
+  overflow: auto;
 }
